--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,47 @@
-#root{
-    color:blueviolet;
+.header{
+    display: flex;
+    justify-content: space-between;
+    background-color: antiquewhite;
+    border: 1px solid black;
+}
+
+.logo{
+    width: 100px;
+}
+
+.nav-items > ul {
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 24px;
+}
+
+.nav-items > ul > li{
+    padding: 10px;
+    list-style: none;
+    padding-right: 50px;
+}
+
+.res-card{
+    width:300px;
+    height: auto;
+    margin: 5px;
+    padding:5px;
+    text-align: center;
+    color: brown;
+}
+
+.res-image{
+    width: 100%;
+    object-fit: cover;
+}
+
+.res-card:hover{
+    border: 1px solid royalblue;
+    cursor:pointer;
+}
+
+.res-container{
+    display: flex;
+    flex-wrap: wrap;
+
 }
