--- a/styles.css
+++ b/styles.css
@@ -55,3 +55,20 @@
     border-radius: 20px;
 }
 
+.shimmer-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.shimmer-card{
+    height: 200px;
+    width: 100px;
+    margin: 20px;
+    background-color: #f0f0f0;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+
+.login-button{
+    padding: 0 20px;
+    margin-right: 10px;
+}
