--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+.body{
+    padding-left: 100px;
+}
+
 .header{
     display: flex;
     justify-content: space-between;
@@ -71,4 +75,12 @@
 .login-button{
     padding: 0 20px;
     margin-right: 10px;
+}
+
+.filter{
+    display: flex;
+    justify-content: space-between;
+}
+.search{
+    margin-top: 10px;
 }
